# eventgraph-ethdenver-2026

./: .gitignore  DATABASE_FIRST_STRATEGY.md  DATABASE_STATUS.md  DATA_FETCH_TIMING.md  DEPLOY.md  DOME_API_ENDPOINTS_AND_TABLES.md  EVENTS_VS_MARKETS_EXPLAINED.md  EXECUTION_FEATURES.md  QUICKSTART.md  README.md  RUNNING.md  SETUP_COMPLETE.md  TOP_N_ANALYSIS.md  WHY_NOT_ALL_ENDPOINTS.md  backfill_limitless2.py  check2.py  check_crossvenue.py  fix_limitless_prices.py  logs.sh  restart_backend.sh  run-migrations.sh  setup-pipeline-service.sh  start.sh  status.sh  stop.sh  sync-data.sh  write_files.py
data-pipeline/: .env.example  Dockerfile  OPTIMIZATION_SUMMARY.md  README.md  SCHEDULING_STRATEGY.md  alembic.ini  atomic_test.py  audit_trigger.py  backfill_prices.sql  backfill_prices2.sql  check_all.py  check_audit.py  check_by_source.py  check_database.py  check_event_fields.sql  check_fedchair.py  check_fedchair_final.py  check_gold_cache.py  check_groups.py  check_prices.py  check_schemas.py  check_screener_data.py  check_trigger.py  check_trigger_full.py  check_volumes.py  definitive_test.py  diagnose_root_cause.py  final_check.sql  fix_fedchair_prices.py  nuclear_fix.py  populate_gold.py  pyproject.toml  requirements.txt  run_parallel_ingestion.sh  start_scheduler.sh  test_trades.py  test_upsert.py  test_upsert2.py  validate_arbitrage.py
data-pipeline/config/: endpoints.yaml  settings.py
data-pipeline/docs/: ARCHITECTURE_PLAN.md  DATA_PIPELINE_STATUS.md  FRONTEND_INTEGRATION_GUIDE.md  PHASE1_PHASE2_IMPLEMENTATION_SUMMARY.md  PIPELINE_ARCHITECTURE.md  SQL_QUERIES.md
data-pipeline/limitless_ingest/: __init__.py  cli.py  config.py  database.py
data-pipeline/migrations/: 001_initial_schema.sql  002_predictions_bronze_schema.sql  003_predictions_silver_schema.sql  004_predictions_gold_views.sql  005_predictions_performance.sql  006_gold_home_page_tables.sql  006_hybrid_approach.sql  007_gold_market_details_tables.sql  008_gold_markets_page_tables.sql  009_gold_analytics_page_tables.sql  010_gold_events_tables.sql  011_add_source_urls_to_gold_events.sql  013_fix_event_markets_schema.sql  (+5 more)
(+276 files in other folders)
